--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-DATABASE_URL="postgresql://novacms_user:Sree2005@localhost:5432/novacms?schema=public"
+# DATABASE_URL="postgresql://fieldstack_user:Sree2005@localhost:5432/fieldstack?schema=public"
+DATABASE_URL="postgresql://neondb_owner:npg_AfZBcta0jRI6@ep-bold-haze-ahm0irck-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 PORT=4000
 NODE_ENV=development
 FRONTEND_URL=http://localhost:8080
