--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,10 @@
-# NovaCMS Server Environment Configuration
+# fieldstack Server Environment Configuration
 # Copy this file to .env and fill in your actual values
 
 # ==================== DATABASE ====================
 # PostgreSQL connection string
 # Format: postgresql://user:password@host:port/database?schema=public
-DATABASE_URL=postgresql://novacms_user:strongpassword@localhost:5432/novacms?schema=public
+DATABASE_URL=postgresql://fieldstack_user:strongpassword@localhost:5432/fieldstack?schema=public
 
 # ==================== SERVER ====================
 # Server port
