--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# ==================== NovaCMS Frontend Environment ====================
+# ==================== fieldstack Frontend Environment ====================
 
 # API Server URL
 VITE_API_URL=http://localhost:4000
