--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "5.22.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -58,13 +58,13 @@
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.0",
+    "prisma": "5.22.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "jest": {
