Fix tsconfig.build.json declarationMap conflict

--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
+
     "declaration": false,
+    "declarationMap": false,
+
     "sourceMap": false,
     "incremental": false
   },
