--- a/package.json
+++ b/package.json
@@ -63,9 +63,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76"
-  },
-  "devDependencies": {
+    "zod": "^3.25.76",
     "@eslint/js": "^9.32.0",
     "@prisma/client": "5.22.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -81,6 +79,6 @@
     "prisma": "5.22.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.38.0"    
   }
 }
