--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-"build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -26,43 +26,47 @@
     "db:reset": "prisma migrate reset --force"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.2.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.10",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
-    "@prisma/client": "5.22.0",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.5",
-    "rxjs": "^7.8.1",
-    "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.10",
+    "@prisma/client": "5.22.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.5",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
+    "multer": "^2.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prettier": "^3.1.1",
     "prisma": "5.22.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"    
+    "typescript": "^5.3.3",
+    "uuid": "^13.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -77,11 +81,10 @@
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
-    ],  
+    ],
     "compilerOptions": {
       "skipLibCheck": true
     },
-
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
