--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 "scripts": {
   "dev": "vite",
   "build": "npm run build:backend",
-  "build:backend": "cd server && npm run build",
+    "build:backend": "cd server && npm install && npm run build",
   "preview": "vite preview"
 }
 ,
