--- a/server/package.json
+++ b/server/package.json
@@ -43,7 +43,6 @@
     "@types/node": "^20.10.5",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^6.0.2",
-    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "bcrypt": "^5.1.1",
@@ -65,8 +64,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "uuid": "^13.0.0"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
