--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:frontend && npm run build:backend",
+
+    "build": "npm run build:frontend:prod && npm run build:backend",
+
     "build:frontend": "tsc && vite build",
+    "build:frontend:prod": "vite build",
+
     "build:backend": "cd server && npm install && npm run build",
+
     "preview": "vite preview"
-  },
+  }
+,
   "dependencies": {
     "vite": "^5.4.19",
     "@vitejs/plugin-react-swc": "^3.11.0",
